--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "lit-html": "1.3.0",
     "magic-string": "0.25.7",
     "preact": "10.5.5",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "rollup": "2.32.1",
     "rollup-plugin-babel": "5.0.0-alpha.2",
     "rollup-plugin-node-builtins": "2.1.2",
