--- a/package.json
+++ b/package.json
@@ -24,31 +24,21 @@
     "theming"
   ],
   "devDependencies": {
-    "@babel/preset-env": "7.12.7",
+    "@babel/preset-env": "7.12.11",
     "@mdx-js/react": "1.6.19",
     "@rollup/plugin-alias": "3.1.1",
-    "@rollup/plugin-commonjs": "16.0.0",
+    "@rollup/plugin-babel": "5.2.2",
+    "@rollup/plugin-commonjs": "17.0.0",
     "@rollup/plugin-inject": "4.0.2",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "10.0.0",
+    "@rollup/plugin-node-resolve": "11.0.1",
     "@rollup/plugin-replace": "2.3.4",
-    "@storybook/addon-a11y": "6.1.4",
-    "@storybook/addon-actions": "6.1.4",
-    "@storybook/addon-backgrounds": "6.1.5",
-    "@storybook/addon-console": "1.2.2",
-    "@storybook/addon-controls": "6.1.4",
-    "@storybook/addon-docs": "6.1.5",
-    "@storybook/addon-essentials": "6.1.5",
-    "@storybook/addon-knobs": "6.1.5",
-    "@storybook/addon-links": "6.1.4",
-    "@storybook/addon-storysource": "6.1.5",
-    "@storybook/addon-toolbars": "6.1.5",
-    "@storybook/addon-viewport": "6.1.5",
-    "@storybook/addons": "6.1.5",
-    "@storybook/node-logger": "6.1.5",
-    "@storybook/preact": "6.1.5",
-    "@storybook/theming": "6.1.5",
-    "@storybook/web-components": "6.1.5",
+    "@storybook/addon-essentials": "6.1.11",
+    "@storybook/addons": "6.1.11",
+    "@storybook/api": "6.1.11",
+    "@storybook/preact": "6.1.11",
+    "@storybook/theming": "6.1.11",
+    "@storybook/web-components": "6.1.11",
     "@web/dev-server": "0.0.19",
     "babel-loader": "8.2.1",
     "cjs-module-lexer": "1.0.0",
@@ -60,8 +50,7 @@
     "preact": "10.5.7",
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "rollup": "2.33.3",
-    "rollup-plugin-babel": "5.0.0-alpha.2",
+    "rollup": "2.35.1",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-terser": "7.0.2",
