chore: use latest Storybook dependencies with lit@1 and lit@2 support

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start:wc": "wds --node-resolve --app-index demo/wc/index.html --open",
     "start:preact": "wds --node-resolve --app-index demo/preact/index.html --open",
     "build": "rm -rf dist && NODE_ENV=production node --max-old-space-size=16384 node_modules/.bin/rollup -c rollup/rollup.config.js",
+    "release:alpha": "standard-version --prerelease alpha && git push --follow-tags origin master && npm publish",
     "release": "standard-version && git push --follow-tags origin master && npm publish",
     "release:dry-run": "standard-version --dry-run"
   },
@@ -30,32 +31,32 @@
   "devDependencies": {
     "@babel/preset-env": "7.12.11",
     "@mdx-js/react": "1.6.19",
-    "@rollup/plugin-alias": "3.1.1",
-    "@rollup/plugin-babel": "5.2.2",
-    "@rollup/plugin-commonjs": "17.0.0",
+    "@rollup/plugin-alias": "3.1.2",
+    "@rollup/plugin-babel": "5.3.0",
+    "@rollup/plugin-commonjs": "19.0.0",
     "@rollup/plugin-inject": "4.0.2",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "11.0.1",
-    "@rollup/plugin-replace": "2.3.4",
-    "@storybook/addon-essentials": "6.1.11",
-    "@storybook/addons": "6.1.11",
-    "@storybook/api": "6.1.11",
-    "@storybook/preact": "6.1.11",
-    "@storybook/theming": "6.1.11",
-    "@storybook/web-components": "6.1.11",
+    "@rollup/plugin-node-resolve": "13.0.0",
+    "@rollup/plugin-replace": "2.4.2",
+    "@storybook/addon-essentials": "6.3.0-beta.8",
+    "@storybook/addons": "6.3.0-beta.8",
+    "@storybook/api": "6.3.0-beta.8",
+    "@storybook/preact": "6.3.0-beta.8",
+    "@storybook/theming": "6.3.0-beta.8",
+    "@storybook/web-components": "6.3.0-beta.8",
     "@web/dev-server": "0.0.19",
     "cjs-module-lexer": "1.0.0",
     "deepmerge": "4.2.2",
     "htm": "3.0.4",
-    "lit-element": "2.4.0",
-    "lit-html": "1.3.0",
+    "lit-element": "2.5.1",
+    "lit-html": "1.4.1",
     "magic-string": "0.25.7",
     "preact": "10.5.7",
-    "rollup": "2.35.1",
+    "rollup": "2.50.5",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-visualizer": "4.2.0",
+    "rollup-plugin-visualizer": "5.5.0",
     "standard-version": "9.0.0"
   }
 }
