--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
-    "@storybook/addon-essentials": "6.3.0-beta.8",
-    "@storybook/addons": "6.3.0-beta.8",
-    "@storybook/api": "6.3.0-beta.8",
-    "@storybook/preact": "6.3.0-beta.8",
-    "@storybook/theming": "6.3.0-beta.8",
-    "@storybook/web-components": "6.3.0-beta.8",
+    "@storybook/addon-essentials": "6.3.0-rc.0",
+    "@storybook/addons": "6.3.0-rc.0",
+    "@storybook/api": "6.3.0-rc.0",
+    "@storybook/preact": "6.3.0-rc.0",
+    "@storybook/theming": "6.3.0-rc.0",
+    "@storybook/web-components": "6.3.0-rc.0",
     "@web/dev-server": "0.0.19",
     "cjs-module-lexer": "1.0.0",
     "deepmerge": "4.2.2",
