--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
-    "@storybook/addon-essentials": "6.3.0-rc.0",
-    "@storybook/addons": "6.3.0-rc.0",
-    "@storybook/api": "6.3.0-rc.0",
-    "@storybook/preact": "6.3.0-rc.0",
-    "@storybook/theming": "6.3.0-rc.0",
-    "@storybook/web-components": "6.3.0-rc.0",
+    "@storybook/addon-essentials": "6.3.0-rc.11",
+    "@storybook/addons": "6.3.0-rc.11",
+    "@storybook/api": "6.3.0-rc.11",
+    "@storybook/preact": "6.3.0-rc.11",
+    "@storybook/theming": "6.3.0-rc.11",
+    "@storybook/web-components": "6.3.0-rc.11",
     "@web/dev-server": "0.0.19",
     "cjs-module-lexer": "1.0.0",
     "deepmerge": "4.2.2",
@@ -51,12 +51,12 @@
     "lit-element": "2.5.1",
     "lit-html": "1.4.1",
     "magic-string": "0.25.7",
-    "preact": "10.5.7",
-    "rollup": "2.50.5",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-globals": "1.4.0",
-    "rollup-plugin-terser": "7.0.2",
-    "rollup-plugin-visualizer": "5.5.0",
-    "standard-version": "9.0.0"
+    "preact": "^10.5.13",
+    "rollup": "^2.52.2",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-visualizer": "^5.5.0",
+    "standard-version": "^9.3.0"
   }
 }
