--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web/storybook-prebuilt",
-  "version": "0.1.21-alpha.3",
+  "version": "0.1.21-alpha.4",
   "publishConfig": {
     "access": "public"
   },
@@ -38,12 +38,12 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
-    "@storybook/addon-essentials": "6.3.0",
-    "@storybook/addons": "6.3.0",
-    "@storybook/api": "6.3.0",
-    "@storybook/preact": "6.3.0",
-    "@storybook/theming": "6.3.0",
-    "@storybook/web-components": "6.3.0",
+    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/addons": "^6.3.2",
+    "@storybook/api": "^6.3.2",
+    "@storybook/preact": "^6.3.2",
+    "@storybook/theming": "^6.3.2",
+    "@storybook/web-components": "^6.3.2",
     "@web/dev-server": "0.0.19",
     "cjs-module-lexer": "1.0.0",
     "deepmerge": "4.2.2",
