--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web/storybook-prebuilt",
-  "version": "0.1.21-alpha.8",
+  "version": "0.1.21-alpha.9",
   "publishConfig": {
     "access": "public"
   },
@@ -17,7 +17,7 @@
     "start:wc": "wds --node-resolve --app-index demo/wc/index.html --open",
     "start:preact": "wds --node-resolve --app-index demo/preact/index.html --open",
     "build": "rm -rf dist && NODE_ENV=production node --max-old-space-size=16384 node_modules/.bin/rollup -c rollup/rollup.config.js",
-    "release:alpha": "standard-version --prerelease alpha && git push --follow-tags origin master && npm publish --tag next",
+    "release:alpha": "standard-version --prerelease alpha && git push --follow-tags origin master && npm publish",
     "release": "standard-version && git push --follow-tags origin master && npm publish",
     "release:dry-run": "standard-version --dry-run"
   },
@@ -38,12 +38,12 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.0",
     "@rollup/plugin-replace": "2.4.2",
-    "@storybook/addon-essentials": "^6.3.5",
-    "@storybook/addons": "^6.3.5",
-    "@storybook/api": "^6.3.5",
-    "@storybook/preact": "^6.3.5",
-    "@storybook/theming": "^6.3.5",
-    "@storybook/web-components": "^6.3.5",
+    "@storybook/addon-essentials": "^6.3.6",
+    "@storybook/addons": "^6.3.6",
+    "@storybook/api": "^6.3.6",
+    "@storybook/preact": "^6.3.6",
+    "@storybook/theming": "^6.3.6",
+    "@storybook/web-components": "^6.3.6",
     "@web/dev-server": "0.0.19",
     "cjs-module-lexer": "1.0.0",
     "deepmerge": "4.2.2",
