--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web/storybook-prebuilt",
-  "version": "0.1.24",
+  "version": "0.1.24-alpha.1",
   "publishConfig": {
     "access": "public"
   },
@@ -17,7 +17,7 @@
     "start:wc": "wds --node-resolve --app-index demo/wc/index.html --open",
     "start:preact": "wds --node-resolve --app-index demo/preact/index.html --open",
     "build": "rm -rf dist && NODE_ENV=production node --max-old-space-size=16384 node_modules/.bin/rollup -c rollup/rollup.config.js",
-    "release:alpha": "standard-version --prerelease alpha && git push --follow-tags origin master && npm publish",
+    "release:alpha": "standard-version --prerelease alpha && git push --follow-tags origin master && npm publish --tag alpha",
     "release": "standard-version && git push --follow-tags origin master && npm publish",
     "release:dry-run": "standard-version --dry-run"
   },
@@ -29,15 +29,15 @@
     "theming"
   ],
   "devDependencies": {
-    "@babel/preset-env": "7.12.11",
-    "@mdx-js/react": "1.6.19",
-    "@rollup/plugin-alias": "3.1.2",
+    "@babel/preset-env": "7.15.0",
+    "@mdx-js/react": "1.6.22",
+    "@rollup/plugin-alias": "3.1.5",
     "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-commonjs": "20.0.0",
     "@rollup/plugin-inject": "4.0.2",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.0",
-    "@rollup/plugin-replace": "2.4.2",
+    "@rollup/plugin-node-resolve": "13.0.4",
+    "@rollup/plugin-replace": "3.0.0",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addons": "^6.3.7",
     "@storybook/api": "^6.3.7",
@@ -45,19 +45,19 @@
     "@storybook/theming": "^6.3.7",
     "@storybook/web-components": "^6.3.7",
     "@web/dev-server": "0.1.22",
-    "cjs-module-lexer": "1.0.0",
+    "cjs-module-lexer": "1.2.2",
     "deepmerge": "4.2.2",
-    "htm": "3.0.4",
+    "htm": "3.1.0",
     "lit-element": "2.5.1",
     "lit-html": "1.4.1",
     "magic-string": "0.25.7",
-    "preact": "^10.5.13",
+    "preact": "^10.5.14",
     "rollup": "^2.56.3",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.5.0",
-    "standard-version": "^9.3.0"
+    "rollup-plugin-visualizer": "^5.5.2",
+    "standard-version": "^9.3.1"
   },
   "dependencies": {}
 }
