--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "https://github.com/modernweb-dev/storybook-prebuilt.git"
   },
   "scripts": {
+    "prestart:wc": "cd demo/wc && cem analyze",
     "start:wc": "wds --node-resolve --app-index demo/wc/index.html --open",
     "start:preact": "wds --node-resolve --app-index demo/preact/index.html --open",
     "build": "rm -rf dist && NODE_ENV=production node --max-old-space-size=16384 node_modules/.bin/rollup -c rollup/rollup.config.js",
@@ -30,6 +31,7 @@
   ],
   "devDependencies": {
     "@babel/preset-env": "7.15.0",
+    "@custom-elements-manifest/analyzer": "^0.5.2",
     "@mdx-js/react": "1.6.22",
     "@rollup/plugin-alias": "3.1.5",
     "@rollup/plugin-babel": "5.3.0",
@@ -38,12 +40,12 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.4",
     "@rollup/plugin-replace": "3.0.0",
-    "@storybook/addon-essentials": "^6.3.7",
-    "@storybook/addons": "^6.3.7",
-    "@storybook/api": "^6.3.7",
-    "@storybook/preact": "^6.3.7",
-    "@storybook/theming": "^6.3.7",
-    "@storybook/web-components": "^6.3.7",
+    "@storybook/addon-essentials": "6.4.0-alpha.32",
+    "@storybook/addons": "6.4.0-alpha.32",
+    "@storybook/api": "6.4.0-alpha.32",
+    "@storybook/preact": "6.4.0-alpha.32",
+    "@storybook/theming": "6.4.0-alpha.32",
+    "@storybook/web-components": "6.4.0-alpha.32",
     "@web/dev-server": "0.1.22",
     "cjs-module-lexer": "1.2.2",
     "deepmerge": "4.2.2",
