--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web/storybook-prebuilt",
-  "version": "0.1.26",
+  "version": "0.1.27-alpha.0",
   "publishConfig": {
     "access": "public"
   },
@@ -40,12 +40,12 @@
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.4",
     "@rollup/plugin-replace": "3.0.0",
-    "@storybook/addon-essentials": "6.4.0-alpha.33",
-    "@storybook/addons": "6.4.0-alpha.33",
-    "@storybook/api": "6.4.0-alpha.33",
-    "@storybook/preact": "6.4.0-alpha.33",
-    "@storybook/theming": "6.4.0-alpha.33",
-    "@storybook/web-components": "6.4.0-alpha.33",
+    "@storybook/addon-essentials": "6.4.0-alpha.34",
+    "@storybook/addons": "6.4.0-alpha.34",
+    "@storybook/api": "6.4.0-alpha.34",
+    "@storybook/preact": "6.4.0-alpha.34",
+    "@storybook/theming": "6.4.0-alpha.34",
+    "@storybook/web-components": "6.4.0-alpha.34",
     "@web/dev-server": "0.1.22",
     "cjs-module-lexer": "1.2.2",
     "deepmerge": "4.2.2",
