chore(release): 0.1.27-alpha.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@web/storybook-prebuilt",
-  "version": "0.1.27-alpha.1",
+  "version": "0.1.27-alpha.2",
   "publishConfig": {
     "access": "public"
   },
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "prestart:wc": "cd demo/wc && cem analyze",
-    "start:wc": "wds --node-resolve --app-index demo/wc/index.html --open",
+    "start:wc": "wds --config demo/wc/wds-storybook.config.mjs",
     "start:preact": "wds --node-resolve --app-index demo/preact/index.html --open",
     "build": "rm -rf dist && NODE_ENV=production node --max-old-space-size=16384 node_modules/.bin/rollup -c rollup/rollup.config.js",
     "release:alpha": "standard-version --prerelease alpha && git push --follow-tags origin master && npm publish --tag alpha",
@@ -30,35 +30,36 @@
     "theming"
   ],
   "devDependencies": {
-    "@babel/preset-env": "7.15.0",
-    "@custom-elements-manifest/analyzer": "^0.5.3",
+    "@babel/preset-env": "7.16.4",
+    "@custom-elements-manifest/analyzer": "0.5.7",
     "@mdx-js/react": "1.6.22",
-    "@rollup/plugin-alias": "3.1.5",
+    "@rollup/plugin-alias": "3.1.8",
     "@rollup/plugin-babel": "5.3.0",
-    "@rollup/plugin-commonjs": "20.0.0",
-    "@rollup/plugin-inject": "4.0.2",
+    "@rollup/plugin-commonjs": "21.0.1",
+    "@rollup/plugin-inject": "4.0.3",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.4",
+    "@rollup/plugin-node-resolve": "13.0.6",
     "@rollup/plugin-replace": "3.0.0",
-    "@storybook/addon-essentials": "6.4.0-alpha.34",
-    "@storybook/addons": "6.4.0-alpha.34",
-    "@storybook/api": "6.4.0-alpha.34",
-    "@storybook/preact": "6.4.0-alpha.34",
-    "@storybook/theming": "6.4.0-alpha.34",
-    "@storybook/web-components": "6.4.0-alpha.34",
-    "@web/dev-server": "0.1.22",
+    "@storybook/addon-essentials": "6.4.0-rc.6",
+    "@storybook/addons": "6.4.0-rc.6",
+    "@storybook/api": "6.4.0-rc.6",
+    "@storybook/preact": "6.4.0-rc.6",
+    "@storybook/theming": "6.4.0-rc.6",
+    "@storybook/web-components": "6.4.0-rc.6",
+    "@web/dev-server": "0.1.28",
+    "@web/dev-server-rollup": "0.3.13",
     "cjs-module-lexer": "1.2.2",
     "deepmerge": "4.2.2",
     "htm": "3.1.0",
-    "lit-element": "2.5.1",
-    "lit-html": "1.4.1",
+    "lit-element": "3.0.2",
+    "lit-html": "2.0.2",
     "magic-string": "0.25.7",
-    "preact": "^10.5.14",
-    "rollup": "^2.56.3",
+    "preact": "^10.5.15",
+    "rollup": "^2.60.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.5.2",
-    "standard-version": "^9.3.1"
+    "standard-version": "^9.3.2"
   }
 }
