--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cjs-module-lexer": "1.2.2",
     "deepmerge": "4.2.2",
     "htm": "3.1.0",
+    "lit": "^2.0.2",
     "lit-element": "3.0.2",
     "lit-html": "2.0.2",
     "magic-string": "0.25.7",
