chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "theming"
   ],
   "devDependencies": {
-    "@babel/preset-env": "7.16.4",
+    "@babel/preset-env": "7.16.5",
     "@custom-elements-manifest/analyzer": "0.5.7",
     "@mdx-js/react": "1.6.22",
     "@rollup/plugin-alias": "3.1.8",
@@ -38,29 +38,30 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-inject": "4.0.3",
     "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.6",
+    "@rollup/plugin-node-resolve": "13.1.1",
     "@rollup/plugin-replace": "3.0.0",
-    "@storybook/addon-essentials": "6.4.4",
-    "@storybook/addons": "6.4.4",
-    "@storybook/api": "6.4.4",
-    "@storybook/preact": "6.4.4",
-    "@storybook/theming": "6.4.4",
-    "@storybook/web-components": "6.4.4",
+    "@storybook/addon-essentials": "6.4.9",
+    "@storybook/addon-docs": "6.4.9",
+    "@storybook/addons": "6.4.9",
+    "@storybook/api": "6.4.9",
+    "@storybook/preact": "6.4.9",
+    "@storybook/theming": "6.4.9",
+    "@storybook/web-components": "6.4.9",
     "@web/dev-server": "0.1.28",
     "@web/dev-server-rollup": "0.3.13",
     "cjs-module-lexer": "1.2.2",
     "deepmerge": "4.2.2",
     "htm": "3.1.0",
-    "lit": "^2.0.2",
+    "lit": "2.0.2",
     "lit-element": "3.0.2",
     "lit-html": "2.0.2",
     "magic-string": "0.25.7",
-    "preact": "^10.6.2",
-    "rollup": "^2.60.2",
-    "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-visualizer": "^5.5.2",
-    "standard-version": "^9.3.2"
+    "preact": "10.6.2",
+    "rollup": "2.61.1",
+    "rollup-plugin-node-builtins": "2.1.2",
+    "rollup-plugin-node-globals": "1.4.0",
+    "rollup-plugin-terser": "7.0.2",
+    "rollup-plugin-visualizer": "5.5.2",
+    "standard-version": "9.3.2"
   }
 }
