fix: require React locally to override peerdependency resolutions

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "lit-html": "2.0.2",
     "magic-string": "0.25.7",
     "preact": "10.6.4",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
     "rollup": "2.61.1",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-globals": "1.4.0",
